--- a/photoview.html
+++ b/photoview.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
-
 </head>
 <body>
 
+<script type="text/template" id="item-template">
+    <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>">
+    <label class="record"><%= title %></label>
+    <input class="edit" id="todoediting" value="<%= title %>">
+    <input class="edit" id="tododate" type="date" value="<%= todoDate %>">
+    <button class="destroy">delete</button>
 
+</script>
 
 <script src="node_modules/jquery/dist/jquery.js"></script>
 <script src="node_modules/underscore/underscore.js"></script>
-<script src="node_modules/backbone/backbone.js"></script>
 <script src="app.js"></script>
-<script src="collections/photocol.js"></script>
-<script src="views/appView.js"></script>
-<script src="models/photom.js"></script>
+
 
 </body>
 </html>
