--- a/fileview.html
+++ b/fileview.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" type="text/css" href="/style/fileview.css"/>
 </head>
 <body>
-<script src="node_modules/jquery/dist/jquery.js"></script>
-<script src="node_modules/underscore/underscore.js"></script>
-<script src="app.js"></script>
+<div id="files">
+
+</div>
+<script src="/node_modules/jquery/dist/jquery.js"></script>
+<script src="/node_modules/underscore/underscore.js"></script>
+<script src="/app.js"></script>
 </body>
 </html>
