--- a/fileview.html
+++ b/fileview.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" type="text/css" href="/style/fileview.css"/>
 </head>
 <body>
-<div id="files">
+<div id="files" class="grid-container">
 </div>
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/underscore/underscore.js"></script>
 <script src="/app.js"></script>
+
+
 </body>
 </html>
