rest api navigation via app implemented

--- a/fileview.html
+++ b/fileview.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="/style/fileview.css"/>
 </head>
 <body>
+<div id="cube">
+
+</div>
 <div id="files" class="grid-container">
 </div>
 <script src="/node_modules/jquery/dist/jquery.js"></script>
