--- a/fileview.html
+++ b/fileview.html
@@ -13,7 +13,8 @@
 </div>
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/underscore/underscore.js"></script>
-<script src="/app.js"></script>
+<script src="/appobj.js"></script>
+<!--<script src="/app.js"></script>-->
 
 
 </body>
