--- a/fileview.html
+++ b/fileview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="/style/fileview.css"/>
+    <link rel="stylesheet" type="text/css" href="/style/filevewstyle.css"/>
 </head>
 <body>
 <div id="cube">
