added html code genetation via objects prototype code invokation

--- a/fileview.html
+++ b/fileview.html
@@ -7,10 +7,8 @@
 </head>
 <body>
 <div id="cube">
-
 </div>
-<div id="files" class="grid-container">
-</div>
+<table id="files"></table>
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/underscore/underscore.js"></script>
 <script src="/appobj.js"></script>
