--- a/fileview.html
+++ b/fileview.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" type="text/css" href="/style/filevewstyle.css"/>
 </head>
 <body>
-<div id="cube">
-</div>
+
 <table id="files"></table>
+
+<div id="cube">
+    <a href="upload" id="upload">Upload...</a>
+</div>
+
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/underscore/underscore.js"></script>
 <script src="/appobj.js"></script>
