--- a/fileview.html
+++ b/fileview.html
@@ -9,9 +9,10 @@
 
 <table id="files"></table>
 
-<div id="cube">
-    <a href="upload" id="upload">Upload...</a>
+<div class="upload" id="uploadcont">Upload.....
+    <span class="uploadtext" id="uploaddialog">Popup text...</span>
 </div>
+
 
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/underscore/underscore.js"></script>
