--- a/fileview.html
+++ b/fileview.html
@@ -10,7 +10,13 @@
 <table id="files"></table>
 
 <div class="upload" id="uploadcont">Upload.....
-    <span class="uploadtext" id="uploaddialog">Popup text...</span>
+    <span class="uploadtext" id="uploaddialog">
+
+    <form action="" method="post" id="uploadform">
+        <input type="file" id="uploadinput">
+        <button type="submit" name="uploadbutt" id="uploadbutt" > Upload!</button>
+    </form>
+    </span>
 </div>
 
 
