async upload preparation

--- a/fileview.html
+++ b/fileview.html
@@ -12,10 +12,8 @@
 <div class="upload" id="uploadcont">Upload.....
     <span class="uploadtext" id="uploaddialog">
 
-    <form action="" method="post" id="uploadform">
         <input type="file" id="uploadinput">
-        <button type="submit" name="uploadbutt" id="uploadbutt" > Upload!</button>
-    </form>
+        <span id="buttcont"><button name="uploadbutt" id="uploadbutt">Upload!</button></span>
     </span>
 </div>
 
