async upload preparation

--- a/fileview.html
+++ b/fileview.html
@@ -10,9 +10,10 @@
 <table id="files"></table>
 
 <div class="upload" id="uploadcont">Upload.....
-    <span class="uploadtext" id="uploaddialog">
 
-        <input type="file" id="uploadinput">
+    <span class="uploadtext" id="uploaddialog">
+        <button name="close" id="clseupload">x</button>
+        <input type="file" id="uploadinput" multiple>
         <span id="buttcont"><button name="uploadbutt" id="uploadbutt">Upload!</button></span>
     </span>
 </div>
