async upload preparation

--- a/fileview.html
+++ b/fileview.html
@@ -9,21 +9,18 @@
 
 <table id="files"></table>
 
-<div class="upload" id="uploadcont">Upload.....
-
+<button id="uploaddialbutt" name="uploadialbutt">Upload.....</button>
+<div class="upload" id="uploadcont">
     <span class="uploadtext" id="uploaddialog">
         <button name="close" id="clseupload">x</button>
         <input type="file" id="uploadinput" multiple>
         <span id="buttcont"><button name="uploadbutt" id="uploadbutt">Upload!</button></span>
     </span>
 </div>
-
-
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/underscore/underscore.js"></script>
 <script src="/appobj.js"></script>
 <!--<script src="/app.js"></script>-->
-
 
 </body>
 </html>
