starting on gallery part

--- a/fileview.html
+++ b/fileview.html
@@ -17,6 +17,7 @@
         <span id="buttcont"><button name="uploadbutt" id="uploadbutt">Upload!</button></span>
     </span>
 </div>
+<div id="gallery"></div>
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/underscore/underscore.js"></script>
 <script src="/appobj.js"></script>
