request hanlers refacoring

--- a/fileview.html
+++ b/fileview.html
@@ -20,7 +20,7 @@
 <div id="gallery"></div>
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/node_modules/underscore/underscore.js"></script>
-<script src="/appobj.js"></script>
+<script src="/js/appobj.js"></script>
 <!--<script src="/app.js"></script>-->
 
 </body>
