--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,15 @@ header
 <nav>
 <ul class="ul_navbar_list">
     <li>
+    <a href="ya.ru">Yandex</a>
+</li>
+    <li>
+        <a href="google.com">Google</a>
+    </li>
+    <li>
+        <a href="duckduckgo.com">DuckDuckGo</a>
+    </li>
+    <li>
         <a href="ya.ru">Yandex</a>
     </li>
     <li>
@@ -18,6 +27,9 @@ header
     </li>
     <li>
         <a href="duckduckgo.com">DuckDuckGo</a>
+    </li>
+    <li>
+        <a href="ya.ru">Yandex</a>
     </li>
 </ul>
 </nav>
