added gallery loading

--- a/index2.html
+++ b/index2.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title2</title>
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
     <link rel="stylesheet" type="text/css" href="style/cssplgrstyle2.css"/>
+    <script src="/js/index2app.js"></script>
 </head>
 <header>
-header
 </header>
 <nav>
 <ul class="ul_navbar_list">
@@ -39,10 +40,9 @@ header
 <section>
     section1
 </section>
-<article>
+<article >
     article
 </article>
 
-<footer>
-    footer
+<footer id="gallery">
 </footer>
