--- a/index2.html
+++ b/index2.html
@@ -35,14 +35,24 @@
 </ul>
 </nav>
 <aside>
-    aside
-</aside>
-<section>
-    section1
-</section>
-<article >
-    article
-</article>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean faucibus cursus tellus, et auctor lectus sollicitudin in. Donec sit amet felis at leo sagittis maximus sit amet vel quam. Duis ullamcorper lacus leo, et gravida nibh venenatis vitae. Ut ultricies odio sapien, nec tincidunt nisi dictum sed. Phasellus facilisis, eros non mattis egestas, massa lacus malesuada lacus, a condimentum tortor lacus vel sem. Morbi sed erat gravida, sodales justo sit amet, luctus ex. Aliquam euismod, eros eget viverra fermentum, lectus risus tempor augue, nec viverra nisi tortor eu augue. Aenean ultrices, massa in placerat varius, ante nisi dapibus eros, eget vestibulum libero nulla eget nunc. Nulla euismod odio in tortor finibus auctor. Cras sit amet dolor eget lorem ultrices luctus eget nec sapien. Morbi consectetur ligula eu massa gravida, sed ultrices libero consectetur. Aliquam erat volutpat. Aliquam placerat massa leo, vel volutpat ex congue sed. In vestibulum semper neque eget egestas. Ut tincidunt arcu eu diam volutpat, id pulvinar massa dictum.
 
-<footer id="gallery">
+    Nunc augue massa, accumsan eu vestibulum in, mattis varius erat. Praesent rhoncus metus sem, id lobortis velit blandit a. Praesent eget condimentum leo, eu dapibus mauris. Nam sed urna tristique, euismod ipsum at, auctor ipsum. Curabitur iaculis ultrices nisl non iaculis. In convallis vel neque a interdum. Maecenas diam est, volutpat sed tellus at, ornare consequat dui. Nullam volutpat, enim a eleifend consequat, erat libero convallis purus, id mollis risus justo vel tellus. Nam sed congue metus. Suspendisse potenti. Duis ac hendrerit erat. Suspendisse luctus tortor quis sodales consectetur. Duis non orci egestas, cursus ipsum ullamcorper, consequat est. Curabitur placerat vestibulum dolor, vitae tristique odio bibendum sit amet. Duis sed maximus nunc.
+
+    Fusce a quam et nisi lobortis finibus vel vel diam. Nulla fringilla lectus velit, quis placerat urna varius at. Pellentesque feugiat non tellus sit amet semper. Curabitur feugiat nulla pellentesque dui consectetur consectetur. Suspendisse commodo massa a dolor tempor consequat. Donec et eros aliquet, bibendum metus vitae, pellentesque felis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin eu risus sit amet augue auctor ultricies. Fusce ante elit, finibus a aliquet a, hendrerit a orci. Sed a lectus eget nulla lobortis sodales. Suspendisse turpis augue, volutpat nec quam eget, tincidunt dignissim nulla.
+
+    Sed ante tortor, rhoncus quis mi quis, iaculis eleifend neque. Sed mollis maximus nibh eget faucibus. Phasellus a purus enim. Suspendisse fermentum est ut magna dictum tincidunt. In pharetra, augue nec vestibulum feugiat, ante felis tempor urna, non rhoncus mi erat ut elit. Sed malesuada eu diam vel condimentum. Integer sit amet mauris molestie, fermentum diam et, ultrices lacus. Ut tempus felis metus, ut pharetra tortor condimentum at. Sed nunc nisl, accumsan ac lacus quis, mattis porta ligula. Cras blandit elementum viverra. Fusce porttitor odio ut nunc pulvinar, in auctor sem sollicitudin. Suspendisse quis dui id massa hendrerit luctus fermentum vel erat. Vivamus non ante non ante volutpat blandit. Nullam fringilla interdum massa.
+
+    Donec malesuada urna et imperdiet placerat. Quisque et dui arcu. Sed placerat ac dolor nec aliquam. Donec tristique vulputate dolor. Proin ut enim quis metus dignissim finibus non ac nisi. Curabitur fringilla rutrum ante, sit amet rutrum libero malesuada eget. Curabitur porttitor, purus sit amet interdum ultricies, lorem mi facilisis nisl, vitae mollis urna est id eros. Vivamus sit amet metus fermentum, congue dolor sed, condimentum ligula.
+
+
+</aside>
+<section id="gallery">
+
+</section>
+<!--<article >-->
+    <!--article-->
+<!--</article>-->
+
+<footer>
 </footer>
